k8s/zabbix/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zabbix
  labels:
    app: zabbix
