k8s/zabbix/01-postgres.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: zabbix-postgres
  namespace: zabbix
  labels:
    app: zabbix-postgres
spec:
  containers:
  - name: postgres
    image: postgres:15-alpine
    ports:
    - containerPort: 5432
    resources:
      limits:
        cpu: 500m
        memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: zabbix-postgres
  namespace: zabbix
spec:
  selector:
    app: zabbix-postgres
  ports:
  - port: 5432
    targetPort: 5432
